--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile(name:"oauth-1.0.1", ext:"arr")
+    compile(name:"oauth-1.0.1", ext:"aar")
 }
